@@ -15,6 +15,8 @@ import com.example.Swipe.Admin.validation.UniqueEmail;
 import com.example.Swipe.Admin.validation.UniqueEmailValidator;
 import lombok.RequiredArgsConstructor;
 import lombok.Setter;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -27,11 +29,13 @@ import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Setter
 public class UserServiceImpl implements UserService {
+    private Logger log = LoggerFactory.getLogger(UserServiceImpl.class);
     private final UserRepo userRepo;
     @Value("${upload.path}")
     private String upload;
@@ -41,22 +45,35 @@ public class UserServiceImpl implements UserService {
         return userRepo.findAllByTypeUserAndBlackListIsFalse(typeUser);
     }
     public List<ClientDTO> findAllByTypeDTO(TypeUser typeUser){
-        return userRepo.findAllByTypeUserAndBlackListIsFalse(typeUser).stream().map(ClientMapper::apply).toList();
+        return userRepo.findAllByTypeUserAndBlackListIsFalse(typeUser).stream().map(ClientMapper::apply).collect(Collectors.toList());
     }
 
-    public Page<ClientDTO> findAllByTypePagination(TypeUser typeUser, Pageable pageable,String keyWord){
+    public Page<ClientDTO> findAllByTypePagination(TypeUser typeUser, Pageable pageable,String keyWord,String sort){
         if (!keyWord.equals("null")) {
-            UserSpecification blackListSpecification = UserSpecification.builder().keyWord(keyWord).typeUser(typeUser).build();
+            UserSpecification blackListSpecification = UserSpecification.builder().keyWord(keyWord).typeUser(typeUser).sort(sort).build();
             return userRepo.findAll(blackListSpecification, pageable).map(ClientMapper::apply);
         }
-        return userRepo.findAllByTypeUserAndBlackListIsFalse(typeUser,pageable).map(ClientMapper::apply);
+        UserSpecification blackListSpecification = UserSpecification.builder().typeUser(typeUser).sort(sort).build();
+        return userRepo.findAll(blackListSpecification,pageable).map(ClientMapper::apply);
     }
-    public Page<BlackListDTO> blackList(Pageable pageable, String keyWord){
+    public Page<BlackListDTO> blackList(Pageable pageable, String keyWord,String sortedBy){
         if (!keyWord.equals("null")) {
-            BlackListSpecification blackListSpecification = BlackListSpecification.builder().keyWord(keyWord).build();
+            BlackListSpecification blackListSpecification = BlackListSpecification.builder().keyWord(keyWord).sortedBy(sortedBy).build();
             return userRepo.findAll(blackListSpecification, pageable).map(BlackLIstMapper::apply);
         }
-        else return userRepo.findAllByBlackListIsTrue(pageable).map(BlackLIstMapper::apply);
+        else {
+            BlackListSpecification blackListSpecification = BlackListSpecification.builder().keyWord(keyWord).sortedBy(sortedBy).build();
+            return userRepo.findAll(blackListSpecification, pageable).map(BlackLIstMapper::apply);
+
+        }
+    }
+
+    public int countBlackList(){
+        return userRepo.countByBlackListTrue();
+    }
+
+    public int countByTypeUser(TypeUser typeUser){
+        return userRepo.countByTypeUserAndBlackListFalse(typeUser);
     }
 
     @Override
@@ -113,50 +130,71 @@ public class UserServiceImpl implements UserService {
     public void saveEntity(User user) {
         userRepo.save(user);
     }
-    public BindingResult userByMail(String email, int id, BindingResult result){
-        List<User> user = userRepo.findAllByMail(email);
-        if (user.size()==0){
+
+    public BindingResult uniqueMail(String email,BindingResult result,int id,String method){
+        List<User> users = userRepo.findAllByMail(email);
+       if (users.size()>=2){
+            result.addError(new FieldError("user", "mail", "Email already exists"));
             return result;
         }
-        else {
-            if (result.hasErrors()&&result.getFieldErrorCount("mail")>0) {
-//                if (user.size() == 1 && user.get(0).getIdUser() == id && id!=0) {
+        else if (method.equals("update")&&users.size()==1){
+            if (users.get(0).getIdUser()==id){
+                return result;
+            }
+            result.addError(new FieldError("user", "mail", "Email already exists"));
+            return result;
+        }
+        else if (method.equals("add")&&users.size()!=0){
+            result.addError(new FieldError("user", "mail", "Email already exists"));
+            return result;
+        }
+
+        else return result;
+    }
+//    public BindingResult userByMail(String email, int id, BindingResult result){
+//        List<User> user = userRepo.findAllByMail(email);
+//        if (user.size()==0){
+//            return result;
+//        }
+//        else {
+//            if (result.hasErrors()&&result.getFieldErrorCount("mail")>0) {
+////                if (user.size() == 1 && user.get(0).getIdUser() == id && id!=0) {
+////                    for (int i = 0; i < result.getAllErrors().size(); i++) {
+////                        if (result.getAllErrors().get(i).equals(result.getFieldError("mail"))) {
+////                            result.getAllErrors().remove(result.getAllErrors().get(i));
+////                        }
+////                    }
+////                    return result;
+////                } else return result;
+//                return result;
+//            }
+//            else {
+//                if (user.size()>0&&id==0) {
+//                    result.addError(new FieldError("client", "mail", "Email already exists"));
+//                }
+//                return result;
+//            }
+//        }
+//    }
+//    public BindingResult userByMailUpdate(String email, int id, BindingResult result){
+//        List<User> user = userRepo.findAllByMail(email);
+//        if (user.size()==0){
+//            return result;
+//        }
+//        else {
+//                if (user.size() == 1 && user.get(0).getIdUser() == id) {
 //                    for (int i = 0; i < result.getAllErrors().size(); i++) {
 //                        if (result.getAllErrors().get(i).equals(result.getFieldError("mail"))) {
 //                            result.getAllErrors().remove(result.getAllErrors().get(i));
 //                        }
 //                    }
 //                    return result;
-//                } else return result;
-                return result;
-            }
-            else {
-                if (user.size()>0&&id==0) {
-                    result.addError(new FieldError("client", "mail", "Email already exists"));
-                }
-                return result;
-            }
-        }
-    }
-    public BindingResult userByMailUpdate(String email, int id, BindingResult result){
-        List<User> user = userRepo.findAllByMail(email);
-        if (user.size()==0){
-            return result;
-        }
-        else {
-                if (user.size() == 1 && user.get(0).getIdUser() == id) {
-                    for (int i = 0; i < result.getAllErrors().size(); i++) {
-                        if (result.getAllErrors().get(i).equals(result.getFieldError("mail"))) {
-                            result.getAllErrors().remove(result.getAllErrors().get(i));
-                        }
-                    }
-                    return result;
-                } else {
-                    result.addError(new FieldError("user", "mail", "Email already exists"));
-                    return result;
-                }
-        }
-    }
+//                } else {
+//                    result.addError(new FieldError("user", "mail", "Email already exists"));
+//                    return result;
+//                }
+//        }
+//    }
 
 
     @Override
